src/styles/base.css
/* ... */
  .register-component .date-picker {
      margin-bottom: .2em;
  }

  .form-control-date.has-error {
      border: 1px solid var(--main-error);
  }

  .form-control-date input {
      border: 0;
      /*box-shadow: none!important;*/
      padding-top: .75em;
      padding-bottom: .75em;
      /*font-size: 14px!important;*/
      padding-left: 0;
      padding-right: 0;
  }

  .label-for-group {
      display: block;
      color: var(--main-font-color);
      font-size: .9rem;
      border: 0;
      margin-bottom: 0;
  }
  .label-soft {
      color: var(--medium-font-color);
  }
  .list_item {
      margin-bottom: .5em;
  }

  .header {
      position: fixed;
      width: 100%;
      background: var(--secondary-background);
      color: var(--secondary-font-color);

      margin: 0;
      z-index: 10;
  }
  .ios .header {
      padding-top: 26px;
  }
  .header_panel-right .btn-primary {
      margin-left: 0.4em;
  }

  .header_title {
      text-transform: lowercase;
      font-style: normal;
      font-weight: 300;
      font-size: 2.5rem;
  }
  .header--with-subtitle {
      width: 70%;
  }
  .header--with-subtitle .header--title {
      font-weight: bold;
      font-size: 16px;
      vertical-align: top;
      display: block;
      line-height: 1em;
      color: var(--secondary-font-color);
  }

  .header--with-subtitle .header--title:active {
    color: var(--secondary-font-color);
  }

  .header--with-subtitle .header--subtitle {
      font-size: 10px;
      display: block;
      line-height: 1.5em;
      /* position: absolute;
      bottom: 8px; */
  }
  .actionbar-top--with-ratings {
      height: auto;
      min-height: 64px;
  }
  .header--with-ratings .header--ratings {
      display: block;
      font-size: 10px;
      line-height: 1.4em;
  }
  .view-container--tall-header {
      padding-top: calc(63px + constant(safe-area-inset-top));
      padding-top: calc(63px + env(safe-area-inset-top));
  }
  .ios .view-container--tall-header {
      padding-top: calc(89px + constant(safe-area-inset-top));
      padding-top: calc(89px + env(safe-area-inset-top));
  }
  .header--image {
      width: 32px;
      height: 32px;
      float: left;
      margin-right: .5em;
  }
  .fa-container {
      position: relative;
  }
  .badge {
      vertical-align: 1px;
      margin-left: .2em;
  }
  .header_notifications {
      border: 1px solid #0180a9;
      border-right: 0;
      border-bottom: 0;
      border-top: 0;
      padding-left: 10px;
      padding-right: 6px;
      cursor: pointer;
  }
  .header_notifications i.background {
      left: -2px;
      top: -1px;
      position: absolute;
      font-size: 18px;
      color: white;
      z-index: -1;
  }
  .trip_seats-available_label {
      margin-top: 4px;
      position: absolute;
  }

  .passenger-looking-for-trip {
    margin-bottom: 1em;
    color: #777;
    padding-left: 1.4em;
  }

  .trip_seats-available_label > span{
      display:block;
      margin: 7px 0;
  }
  .header_notifications i {
      color: #0180a9;
  }
  .header_panel-left {
      position: relative;
      margin: 0 0 0 1.5em;
  }
  .header .header_panel-right,
  .header .header_panel-left {
      display: inline-block;
      vertical-align: middle;
  }

  .header .header_panel-left > img:last-child {
      left: 22px;
      top: -12px;
      position: absolute;
      -webkit-filter: drop-shadow(2px 2px 5px rgba(0,0,0,0.3));
      z-index: 10;
  }

  .rate-item .image-width .trip_driver_img{
      width: 4em;
      height: 4em;
  }

  .rate-item .image-width {
      display: none;
  }
  .rate-item .text-width {
      width: 100%;
      float: none;
      padding-left: 0;
  }
  .rate-item textarea {
      margin-top: .4em;
  }

  .rate-item-detail {
      color: var(--secondary-background);
      font-weight: bold;
      font-size: 11px;
      margin-bottom: .5em;
  }
  .column-rating .list-group-item {
      margin-bottom: 1em;
  }
  .on-boarding--overlay {
    transition: 500ms;
    z-index: 9999;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-color: #000000db;
    opacity: 0;
    padding: 10em;
  }
  .on-boarding--overlay.show {
      opacity: 1;
      padding: 0;
  }
  .on-boarding--container {
      width: 100%;
      height: 100%;
      float: left;
      background-color: #fff;
      text-align: center;
      position: relative;
  }
  .on-boarding--top-container {
        height: 80%;
        width: 100%;
  }
  .on-boarding--img {
    width: 100%;
    padding-top: 2em;
    -o-object-fit: contain;
    object-fit: contain;
    max-height: 80%;
  }
  .on-boarding--container h1 {
      color: black;
      margin: .8em;
      line-height: 1.3em;
      font-size: 2.1em;
  }
  .on-boarding--bottom-container {
    vertical-align: bottom;
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 100px;
    left: 0;
    line-height: 100px;
  }

  .tab-content .profile-rates-component .list-group-item {
      padding: 1.8em 1.6em;
  }
  .pika-single.is-bound {
      margin-top: 1px;
  }
  .header .header_panel-left .header_title {
      margin: 0;
      line-height: 74px;
      width: 50%;
      margin-left: 1.2em;
  }

  .header .header_panel-right {
      margin-right: 1.5rem;
      float: right;
      position: relative;
      line-height: 74px;
      vertical-align: middle;
  }

  .header_panel-right .btn-link,
  .header_panel-right a {
      text-transform: uppercase;
  }

  .header_panel-right .btn-link {
      padding: 6px;
  }

  .header .header_profile {
      display: inline-block;
  }

  .header_profile_image {
      vertical-align: middle;
      display: inline-block;
      width: 32px;
      width: 2rem;
      height: 32px;
      height: 2rem;
      border-radius: 100%;
      border: 2px solid var(--secondary-font-color);
      margin-bottom: 0;
  }

  .header .header_profile button.btn {
      margin: 0 3px;
      padding: 6px 6px;
      background-color: transparent;
      border: none;
  }
/* ... */

